# ChangingDot

./: .gitignore  404.html  CONTRIBUTING.md  LICENCE  README.md  index.html  mkdocs.yml
back/: .gitignore  Makefile  README.md  pyproject.toml
back/src/analytics/: wandb_analytics.py
back/src/changing_dot/: apply_graph_changes.py  commit_graph.py  create_graph.py  custom_types.py  handle_node.py  optimize_graph.py  resolve_graph.py  resume_graph.py
back/src/changing_dot/changing_graph/: changing_graph.py
back/src/changing_dot/checks/: check_if_duplicate_solution.py  check_solution_syntax_correctness.py  check_solution_validity.py  merge_cycles.py  split_new_and_duplicate_nodes.py
back/src/changing_dot/commit/: commit_edits.py  conflict_handler.py  reset_repo.py
back/src/changing_dot/config/: constants.py  environment.py
back/src/changing_dot/dependency_graph/: dependency_graph.py  language_matchers.py  node_type_to_terminal.py  types.py
back/src/changing_dot/error_manager/: error_manager.py  mypy_error_manager.py  roslyn_error_manager.py
back/src/changing_dot/generated_grpc/: feedback_server_pb2.py  feedback_server_pb2_grpc.py
back/src/changing_dot/instruction_interpreter/: basic_instruction_interpreter.py  block_instruction_interpreter.py  block_prompts.py  hard_coded_instruction_interpreter.py  instruction_interpreter.py
back/src/changing_dot/instruction_manager/: custom_instruction_manager.py  hard_coded_instruction_manager.py  instruction_manager.py  prompt_diff.py
back/src/changing_dot/modifyle/: modifyle.py  modifyle_block.py
back/src/changing_dot/utils/: file_utils.py  get_algorithm_language.py  index_manager.py  list_action_applier.py  llm_model_utils.py  process_diff.py  process_pickle_files.py  reverse_edits.py  text_functions.py  tree_sitter_utils.py
back/src/changing_dot_cli/: cli.py  setup_feedback_server.py
back/src/changing_dot_visualize/: format_text.py  main.py  node_presentation.py  observer.py  step_presentation.py  utils.py
back/src/cli/: cli.py  setup_feedback_server.py
back/src/config/: __init__.py  cache.py  constants.py  environment.py  storage.py
back/src/core/: commit_graph.py  create_graph.py  handle_node.py  optimize_graph.py  resume_graph.py
back/src/core/changing_graph/: changing_graph.py
back/src/core/checks/: check_if_duplicate_solution.py  check_solution_syntax_correctness.py  check_solution_validity.py  merge_cycles.py  split_new_and_duplicate_nodes.py
back/src/core/commit/: commit_edits.py  conflict_handler.py  reset_repo.py
back/src/core/dependency_graph/: dependency_graph.py  node_type_to_terminal.py
back/src/core/error_manager/: error_manager.py
back/src/core/generated_grpc/: feedback_server_pb2_grpc.py
back/src/core/generated_grpc_types/: feedback_server_pb2.pyi
back/src/core/instruction_interpreter/: basic_instruction_interpreter.py  hard_coded_instruction_interpreter.py  instruction_interpreter.py  prompts.py
back/src/core/instruction_manager/: custom_instruction_manager.py  hard_coded_instruction_manager.py  instruction_manager.py  prompt_diff.py
back/src/core/modifyle/: modifyle.py
back/src/core/utils/: list_action_applier.py
back/src/python_analyzer/: python_analyzer.py  setup.cfg  temporary_venv_creator.py
back/src/scripts/: benchmark_job.py  run_benchmark.py  sample_config.yaml
back/src/utils/: list_action_applier.py  process_pickle_files.py  text_functions.py
back/src/visualize/: graph_vis.py  main.py  node_presentation.py  observer.py  step_presentation.py
back/tests/: __init__.py  test_example_configs.py
back/tests/core/: test_block_instruction_manager.py  test_block_interpreter.py  test_commit.py  test_e2e.py  test_e2e_resolve.py  test_interpreter.py  test_modifyle.py  test_modifyle_block.py  test_prompt_diff.py
back/tests/core/fake_repo/: file1.cs
back/tests/utils/: test_index_manager.py  test_list_action_applier.py  test_process_diff.py
(+84 files in other folders)
